--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,6 +13,8 @@
   .headerContainer {
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    padding: 20px 20px 20px 20px;
   }
 
   .headerContainer > img {
