--- a/src/pages/contactUs/Body/Body.css
+++ b/src/pages/contactUs/Body/Body.css
@@ -15,3 +15,11 @@
     padding: 40px 60px 40px 60px;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .bodyContainer {
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px 20px 40px 20px;
+  }
+}
