--- a/src/pages/contactUs/Body/FinalMessage/FinalMessage.css
+++ b/src/pages/contactUs/Body/FinalMessage/FinalMessage.css
@@ -19,3 +19,9 @@
 .finalMessageContainer p {
   font-size: 14pt;
 }
+
+@media only screen and (max-width: 600px) {
+  .finalMessageContainer p {
+    text-align: center;
+  }
+}
